# nge3

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TODO.md  conanfile.txt
.github/workflows/: cmake.yml
buildscripts/: build.bat  build.sh  clean.sh  configure.bat  configure.sh  run.bat  run.sh  test.bat
include/demo/: DebugScene.h  IntroScene.h  IntroView.h
include/demo/Graph/: GraphScene.h
include/demo/Pong/: Ball.h  Paddle.h  PongScene.h
include/demo/Topdown/Overworld/: OverworldScene.h
include/demo/Topdown/TitleScene/: TitleScene.h
include/misc/: Arithmetic.hpp  Point.hpp  Rectangle.hpp
include/nge/: App.h  Graphics.h  Input.h  Scene.h  SceneFactory.hpp  SceneManager.h  Setupable.hpp  Timer.h
include/nge/Components/: AtlasAnimation.h  BlendedText.h  Button.h  Canvas.h  Clickable.h  Component.h  Composite.hpp  Drawable.h  ShadedText.h  SimpleComponent.h  SolidText.h  Sprite.h  Text.h  Translatable.h
include/nge/Components/Animation/: AnimationController.h  FrameAnimationController.h  TimedAnimationController.h
include/nge/Components/Drawing/: BasicGraphicsUser.h  Component.h  Drawable.h  Translatable.h
include/nge/Components/Keyboard/: BasicKeyUser.h  Keyable.h
include/nge/Components/Mouse/: BasicMouseUser.h  Button.h  ClickController.h  Clickable.h  HoverController.h  Hoverable.h
include/nge/Components/Shapes/: Rectangle.h
include/nge/Concepts/: Drawable.hpp
include/nge3/demo/: IntroView.h
include/nge3/nge/: App.h  Component.h  Graphics.h  Input.h  Timer.h  View.h
include/nge3/nge/Components/: Component.h  Drawable.h  Rotatable.h  SimpleComponent.h  Sprite.h  Text.h
include/nge3/nge3/: App.h  Timer.h  View.h
include/nge3/ngsdl/: BlendMode.h  Color.h  Font.h  FontRenderType.h  Point.h  Rectangle.h  Renderer.h  RendererFlags.h  RendererFlip.h  SDLException.h  TTFException.h  Texture.h  TextureLoader.h  Timer.h  Window.h  WindowFlag.h  WindowFlags.h
include/nge3/ngsdl/EventTypes/: DefaultEvent.h  KeyDownEvent.h  KeyUpEvent.h  MouseButtonDownEvent.h  MouseButtonUpEvent.h  QuitEvent.h
include/nge3/ngsdl/Events/: DefaultEvent.h  Event.h  Event.hpp  EventQueue.h  EventType.h  EventVisitor.hpp  KeyMod.h  KeyState.h  KeySym.h  KeyUpEvent.h  Keycode.h  MouseButton.h  QuitEvent.h  Scancode.h
include/ngsdl/: BlendMode.h  Color.h  Font.h  FontRenderType.h  Init.h  InitFlags.h  Point.h  Rect.h  Rectangle.h  Renderer.h  RendererFlags.h  RendererFlip.h  SDLException.h  Surface.h  TTFException.h  Texture.h  Window.h  WindowFlags.h
include/ngsdl/EventTypes/: DefaultEvent.h  KeyDownEvent.h  KeyUpEvent.h  MouseButtonDownEvent.h  MouseButtonUpEvent.h  QuitEvent.h
include/ngsdl/Events/: Event.hpp  EventQueue.h  EventType.h  EventVisitor.hpp  KeyMod.h  KeyState.h  KeySym.h  Keycode.h  MouseButton.h  MouseButtonMask.h  Scancode.h
scripts/: build.sh  clean.sh  configure.bat  configure.sh  configure_clang.bat  configure_mingw.bat  run.bat  run.sh
src/: main.cpp  nge3_test_app.cpp  ngsdl_test_app.cpp
src/demo/: CMakeLists.txt  DebugScene.cpp  IntroScene.cpp  IntroView.cpp  main.cpp
src/demo/Graph/: GraphScene.cpp
src/demo/Pong/: Ball.cpp  Paddle.cpp  PongScene.cpp
src/demo/Topdown/Overworld/: OverworldScene.cpp
src/demo/Topdown/TitleScene/: TitleScene.cpp
src/misc/: CMakeLists.txt  Rectangle.cpp
src/nge/: App.cpp  CMakeLists.txt  Graphics.cpp  Input.cpp  Scene.cpp  SceneFactory.cpp  SceneManager.cpp  Timer.cpp  View.cpp
src/nge/Components/: AtlasAnimation.cpp  BlendedText.cpp  Button.cpp  Canvas.cpp  Clickable.cpp  Component.cpp  Drawable.cpp  Rotatable.cpp  ShadedText.cpp  SimpleComponent.cpp  SolidText.cpp  Sprite.cpp  Text.cpp  Translatable.cpp
src/nge/Components/Animation/: AnimationController.cpp  FrameAnimationController.cpp  TimedAnimationController.cpp
src/nge/Components/Drawing/: BasicGraphicsUser.cpp  Component.cpp  Drawable.cpp  Rotatable.cpp  Translatable.cpp
src/nge/Components/Keyboard/: BasicKeyUser.cpp  Keyable.cpp
src/nge/Components/Mouse/: BasicMouseUser.cpp  Button.cpp  ClickController.cpp  Clickable.cpp  HoverController.cpp  Hoverable.cpp
src/nge/Components/Shapes/: Rectangle.cpp
src/nge3/demo/: CMakeLists.txt  IntroView.cpp
src/nge3/nge/: App.cpp  CMakeLists.txt  Component.cpp  Graphics.cpp  Input.cpp  Timer.cpp  View.cpp
src/nge3/nge/Components/: Clickable.cpp  Drawable.cpp  Rotatable.cpp  SimpleComponent.cpp  Sprite.cpp  Text.cpp  Translatable.cpp
src/nge3/nge3/: App.cpp  CMakeLists.txt  Component.cpp  Timer.cpp  View.cpp
src/nge3/ngsdl/: BlendMode.cpp  CMakeLists.txt  Color.cpp  Font.cpp  Point.cpp  Rectangle.cpp  Renderer.cpp  RendererFlags.cpp  RendererFlip.cpp  SDLException.cpp  TTFException.cpp  Texture.cpp  TextureLoader.cpp  Timer.cpp  Window.cpp  WindowFlag.cpp  WindowFlags.cpp
src/nge3/ngsdl/EventTypes/: DefaultEvent.cpp  KeyDownEvent.cpp  KeyUpEvent.cpp  MouseButtonDownEvent.cpp  MouseButtonUpEvent.cpp  QuitEvent.cpp
src/nge3/ngsdl/Events/: DefaultEvent.cpp  Event.cpp  EventQueue.cpp  KeyMod.cpp  KeySym.cpp  KeyUpEvent.cpp  MouseButton.cpp  QuitEvent.cpp
src/ngsdl/: BlendMode.cpp  CMakeLists.txt  Color.cpp  Font.cpp  Init.cpp  InitFlags.cpp  Point.cpp  Rectangle.cpp  Renderer.cpp  RendererFlags.cpp  RendererFlip.cpp  SDLException.cpp  Surface.cpp  TTFException.cpp  Texture.cpp  Timer.cpp  Window.cpp  WindowFlags.cpp
src/ngsdl/EventTypes/: DefaultEvent.cpp  KeyDownEvent.cpp  KeyUpEvent.cpp  MouseButtonDownEvent.cpp  MouseButtonUpEvent.cpp  QuitEvent.cpp
src/ngsdl/Events/: Event.cpp  EventQueue.cpp  KeyMod.cpp  KeySym.cpp  MouseButton.cpp  MouseButtonMask.cpp
src/ngsdl_demo/: CMakeLists.txt  main.cpp  ngsdl_test_app.cpp
tests/: CMakeLists.txt  TempTest.cpp
tests/misc/: CMakeLists.txt  PointTests.cpp  Point_SDL_Point_Interop.cpp  RectangleTests.cpp  Rectangle_SDL_Rect_Interop.cpp
tests/nge3/ngsdl/: PointTests.cpp
tests/nge3/ngsdl/Events/: KeyModTests.cpp
tests/ngsdl/: CMakeLists.txt  ColorTests.cpp  PointTests.cpp  SurfaceTests.cpp
tests/ngsdl/Events/: KeyModTests.cpp
